--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -21,7 +21,9 @@ jobs:
           token: ${{ secrets.PAT }}
       
       - uses: extractions/setup-just@v2
-      
+      - uses: Dovyski/setup-opencv-action@v1.1
+        with:
+          opencv-version: '4.0.0'
       - name: Build the benchmark target(s)
         run: |
           just run
@@ -44,6 +46,9 @@ jobs:
           token: ${{ secrets.PAT }}
 
       - uses: extractions/setup-just@v2
+      - uses: Dovyski/setup-opencv-action@v1.1
+        with:
+          opencv-version: '4.0.0'
       
       - name: Build the benchmark target(s)
         run: |
