--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -26,7 +26,7 @@ jobs:
       #     opencv-version: '4.0.0'
       #     install-deps: false
 
-      - run: apt install libopencv-dev
+      - run: sudo apt install -y libopencv-dev
           
       - name: Build the benchmark target(s)
         run: |
@@ -55,7 +55,7 @@ jobs:
       #     opencv-version: '4.0.0'
       #     install-deps: false
       
-      - run: apt install libopencv-dev
+      - run: sudo apt install -y libopencv-dev
       
       - name: Build the benchmark target(s)
         run: |
