--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v4
         with: 
           token: ${{ secrets.PAT }}
+          lfs: true
       - run: git config --global url."https://not-matthias:${{ secrets.PAT }}@github.com".insteadOf "https://github.com"
 
       
@@ -50,6 +51,7 @@ jobs:
       - uses: actions/checkout@v4
         with: 
           token: ${{ secrets.PAT }}
+          lfs: true
       - run: git config --global url."https://not-matthias:${{ secrets.PAT }}@github.com".insteadOf "https://github.com"
 
 
