--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -29,7 +29,7 @@ jobs:
       #     opencv-version: '4.0.0'
       #     install-deps: false
 
-      - run: sudo apt install -y libopencv-dev
+      - run: sudo apt-get update && sudo apt install -y libopencv-dev
           
       - name: Build the benchmark target(s)
         run: |
