--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -33,8 +33,9 @@ jobs:
           
       - name: Build the benchmark target(s)
         run: |
+          just build-instrumentation
           just run
-      
+
       - name: Run the benchmarks
         uses: CodSpeedHQ/action@v3
         with:
@@ -65,7 +66,9 @@ jobs:
       
       - name: Build the benchmark target(s)
         run: |
+          just build-walltime
           just run
+
 
       - name: Run the benchmarks
         uses: CodSpeedHQ/action@v3
