--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -29,6 +29,8 @@ jobs:
       #     key: ${{ runner.os }}-build-tests-${{ hashFiles('**/CMakeLists.txt', '/usr/local/**') }}
 
       - uses: extractions/setup-just@v2
+
+      - run: sudo apt-get update && sudo apt-get install -y build-essential checkinstall git cmake g++ wget unzip pkg-config yasm git
       - uses: Dovyski/setup-opencv-action@v1.1
         with:
           opencv-version: '4.0.0'
