--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -22,11 +22,11 @@ jobs:
           lfs: true
       - run: git config --global url."https://not-matthias:${{ secrets.PAT }}@github.com".insteadOf "https://github.com"
 
-      # - name: Cache opencv
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: /usr/local
-      #     key: ${{ runner.os }}-build-tests-${{ hashFiles('**/CMakeLists.txt', '/usr/local/**') }}
+      - name: Cache opencv
+        uses: actions/cache@v3
+        with:
+          path: build-opencv
+          key: ${{ runner.os }}-build-opencv
 
       - uses: extractions/setup-just@v2
 
